add drop shadow, better matching colors

--- a/src/pages/qrcodecomponent.astro
+++ b/src/pages/qrcodecomponent.astro
@@ -5,11 +5,11 @@ import qrCode from "../../assets/QRCodeComponent/image-qr-code.png";
 ---
 
 <Layout title="Frontend Mentor | QR code component">
-    <div class="flex h-[100vh] w-full items-center justify-center bg-sky-200">
-        <div class="w-[20rem] rounded-3xl bg-white p-4">
+    <div class="flex h-[100vh] w-full items-center justify-center bg-[#D5E0EF]">
+        <div class="w-[20rem] rounded-3xl bg-white p-4 shadow-sm">
             <Image src={qrCode} alt="QR Code" class="size-72 rounded-xl" />
             <div class="flex flex-col justify-between gap-4 p-4 text-center">
-                <div class="text-xl font-bold text-neutral-800">
+                <div class="text-xl font-bold text-slate-800">
                     Improve your front-end skills by building projects
                 </div>
                 <div class="text-sm text-neutral-500">
