--- a/src/pages/qrcodecomponent.astro
+++ b/src/pages/qrcodecomponent.astro
@@ -11,9 +11,9 @@ import qrCode from "../../assets/QRCodeComponent/image-qr-code.png";
         <div class="w-[20rem] rounded-3xl bg-white p-4 shadow-lg">
             <Image src={qrCode} alt="QR Code" class="size-72 rounded-xl" />
             <div class="flex flex-col justify-between gap-4 p-4 text-center">
-                <div class="text-xl font-bold text-slate-800">
+                <h1 class="text-xl font-bold text-slate-800">
                     Improve your front-end skills by building projects
-                </div>
+                </h1>
                 <div class="text-sm text-neutral-500">
                     Scan the QR code to visit Frontend Mentor and take your
                     coding skills to the next level
