ensure sans-serif

--- a/src/pages/qrcodecomponent.astro
+++ b/src/pages/qrcodecomponent.astro
@@ -10,7 +10,9 @@ import qrCode from "../../assets/QRCodeComponent/image-qr-code.png";
     >
         <div class="w-[20rem] rounded-3xl bg-white p-4 shadow-lg">
             <Image src={qrCode} alt="QR Code" class="size-72 rounded-xl" />
-            <div class="flex flex-col justify-between gap-4 p-4 text-center">
+            <div
+                class="flex flex-col justify-between gap-4 p-4 text-center font-sans"
+            >
                 <h1 class="text-xl font-bold text-slate-800">
                     Improve your front-end skills by building projects
                 </h1>
