--- a/src/pages/blog-preview-card.astro
+++ b/src/pages/blog-preview-card.astro
@@ -1,33 +1,65 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import qrCode from "../../assets/QRCodeComponent/image-qr-code.png";
+import blogPreview from "../../assets/blog-preview-card-main/assets/images/illustration-article.svg";
+import {
+    Card,
+    CardTitle,
+    CardHeader,
+    CardContent,
+} from "../components/ui/card";
+import "@fontsource/figtree";
+
+const tags = ["Learning"];
 ---
 
 <Layout title="Frontend Mentor | Blog Preview Card">
     <main
         class="flex h-[100vh] w-full items-center justify-center bg-[#F5D04E]"
     >
-        <div class="w-[20rem] rounded-3xl bg-white p-4 shadow-lg">
-            <Image src={qrCode} alt="QR Code" class="size-72 rounded-xl" />
-            <div
-                class="flex flex-col justify-between gap-4 p-4 text-center font-sans"
-            >
-                <h1 class="text-xl font-bold text-slate-800">
-                    Improve your front-end skills by building projects
-                </h1>
-                <div class="text-sm text-neutral-500">
-                    Scan the QR code to visit Frontend Mentor and take your
-                    coding skills to the next level
+        <!-- <div class="w-[20rem] rounded-3xl bg-white p-4 shadow-lg"> -->
+        <!--     <Image src={qrCode} alt="QR Code" class="size-72 rounded-xl" /> -->
+        <!--     <div -->
+        <!--         class="flex flex-col justify-between gap-4 p-4 text-center font-sans" -->
+        <!--     > -->
+        <!--         <h1 class="text-xl font-bold text-slate-800"> -->
+        <!--             Improve your front-end skills by building projects -->
+        <!--         </h1> -->
+        <!--         <div class="text-sm text-neutral-500"> -->
+        <!--             Scan the QR code to visit Frontend Mentor and take your -->
+        <!--             coding skills to the next level -->
+        <!--         </div> -->
+        <!--     </div> -->
+        <!-- </div> -->
+
+        <Card className="border-2 border-black shadow-[0.2rem_0.3rem_0_0_#000]">
+            <CardHeader className="max-w-64 gap-3">
+                <Image
+                    src={blogPreview}
+                    alt="Preview Image"
+                    class="rounded-xl"
+                />
+
+                <div>
+                    {
+                        tags.map((tag) => (
+                            <span class="rounded bg-[#F5D04E] p-2">{tag}</span>
+                        ))
+                    }
                 </div>
-            </div>
-        </div>
+
+                <div class="text-xs">Published 21 Dec 2023</div>
+
+                <CardTitle className="figtree font-bold"
+                    >HTML &amp; CSS Foundations</CardTitle
+                >
+            </CardHeader>
+        </Card>
     </main>
 </Layout>
 
 <style>
-    .mid-text {
-        color: green;
-        font-size: 1.3rem;
+    .figtree {
+        font-family: "Figtree";
     }
 </style>
