--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Card from "../components/Card.astro";
         </h1>
         <ul role="list" class="link-card-grid">
             <Card href="/qrcodecomponent" title="QR Code Component" body="" />
+            <Card href="/blog-preview-card" title="Blog Preview Card" body="" />
         </ul>
     </main>
 </Layout>
