--- a/src/pages/qrcodecomponent.astro
+++ b/src/pages/qrcodecomponent.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import qrCode from "../../assets/QRCodeComponent/image-qr-code.png";
+import qrCode from "../assets/QRCodeComponent/image-qr-code.png";
 ---
 
 <Layout title="Frontend Mentor | QR code component">
