fix alignment for multiple tags

--- a/src/pages/blog-preview-card.astro
+++ b/src/pages/blog-preview-card.astro
@@ -24,7 +24,7 @@ const tags = ["Learning"];
                     style={{ objectFit: "cover" }}
                 />
 
-                <div class="text-sm font-bold">
+                <div class="flex items-center gap-3 text-sm font-bold">
                     {
                         tags.map((tag) => (
                             <span class="rounded bg-[#F5D04E] px-2 py-1 shadow-[1px_1px_1px_0_rgba(0,0,0,.2)]">
